--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.24'
-      - run: cd backend && go test ./tests/... -count=1
+      - name: Start backend server
+        run: cd backend && go run main.go &
+      - name: Wait for backend to be ready
+        run: |
+          timeout 30 bash -c 'while ! curl -s http://localhost:8080; do sleep 1; done'
+      - name: Run backend tests
+        run: cd backend && go test ./tests/... -count=1
